[package]
name = "kanau"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "General purpose functional programming library for Rust."
repository = "https://github.com/suitsu31-club/kanau"

[dependencies]
tokio = {version = "1", features = ["full"]}
tokio-stream = {version = "0.1.17", features = ["full"]}
futures = "0.3.31"
thiserror = "2.0"
anyhow = "1.0"
serde_json = {version = "^1.0", optional = true}
bincode = {version = "^2.0", optional = true}
rkyv = {version = "^0.8", optional = true}
prost = {version = "0.14", optional = true}

[features]
message = []