[workspace]
resolver = "3"
members = ["kanau-macro"]

[package]
name = "kanau"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "Functional programming library for web development."
repository = "https://github.com/suitsu31-club/kanau"
authors = ["Nikaidou Haruki <nharuki@pm.me>"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
tokio = {version = "1", features = ["full"]}
tokio-stream = {version = "0.1.17", features = ["full"]}
futures = "0.3.31"
thiserror = "2.0"
anyhow = "1.0"
serde_json = {version = "^1.0", optional = true}
bincode = {version = "^2.0", optional = true}
rkyv = {version = "^0.8", optional = true}
prost = {version = "0.14", optional = true}
kanau-macro = {path = "./kanau-macro", version = "0.1.0"}

[features]
message = []

[dev-dependencies]
serde = {version = "1.0", features = ["derive"]}
