[package]
name = "kanau-macro"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Proc macros for kanau."
repository = "https://github.com/suitsu31-club/kanau"
authors = ["Nikaidou Haruki <nharuki@pm.me>"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
proc-macro2 = "1.0"
convert_case = "0.8.0"
quote = "1"
regex = "1.11.1"